--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="home_flash_sale_view_all_button_text">View all</string>
     <string name="home_brands_collection_title">Brands</string>
     <string name="home_brands_view_all_button_text">View all</string>
+    <string name="good_details_colors_title">Colors:</string>
+    <string name="good_details_quantity_title">Quantity</string>
+    <string name="good_details_quantity_add_to_cart_button_title">ADD TO CART</string>
 </resources>
